--- a/gb/20/2/20/n11884183.md
+++ b/gb/20/2/20/n11884183.md
@@ -1,13 +1,13 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/jpwvgr227/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/jpwvgr227/www/master/t/djy/1.jpg" title="大纪元"></a><a href="https://github.com/jpwvgr227/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/jpwvgr227/www/master/t/djy/3.jpg" title="国际新闻"></a><a href="https://github.com/jpwvgr227/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/jpwvgr227/www/master/t/djy/4.jpg" title="大陆新闻"></a><a href="https://github.com/jpwvgr227/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/jpwvgr227/www/master/t/djy/5.jpg" title="评论"></a><a href="https://github.com/jpwvgr227/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/jpwvgr227/www/master/t/djy/6.jpg" title="文化"></a><a href="https://github.com/jpwvgr227/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/jpwvgr227/www/master/t/djy/7.jpg" title="生活"></a><a href="https://github.com/jpwvgr227/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/jpwvgr227/www/master/t/djy/8.jpg" title="娱乐"></a><a href="https://github.com/jpwvgr227/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/jpwvgr227/www/master/t/djy/9.jpg" title="健康"><a href="https://www.youlucky.com"><img src="https://raw.githubusercontent.com/jpwvgr227/www/master/t/djy/10.jpg" title="购物"></a><a href="https://donate.epochtimes.com/?utm_medium=epochtimes&utm_source=referral&utm_campaign=donate_button_djyarticleheader"><img src="https://raw.githubusercontent.com/jpwvgr227/www/master/t/djy/12.jpg" title="捐款"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/jpwvgr227/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/jpwvgr227/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/jpwvgr227/djy/blob/master/gb/nf6123.md#1">诉江</a> | <a target="_blank" href="https://github.com/jpwvgr227/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/jpwvgr227/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/jpwvgr227/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/jpwvgr227/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/jpwvgr227/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/jpwvgr227/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/jpwvgr227/djy/blob/master/gb/nf5287.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/jpwvgr227/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/jpwvgr227/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://github.com/jpwvgr227/djy/blob/master/gb/nf1235328.md#1">书籍</a> | <a target="_blank" href="https://github.com/jpwvgr227/www/blob/master/README.md?zsrh#1">翻墙</a></p><p><a target="_blank" href="https://github.com/jpwvgr227/djy/blob/master/gb/nf5562.md#1">伪火</a> | <a target="_blank" href="https://github.com/jpwvgr227/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/jpwvgr227/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/jpwvgr227/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/jpwvgr227/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/jpwvgr227/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/jpwvgr227/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/jpwvgr227/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/jpwvgr227/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/jpwvgr227/ntdtv/blob/master/gb/prog1530_1.md#1">和平抗议</a> | <a target="_blank" href="https://github.com/jpwvgr227/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/jpwvgr227/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/jpwvgr227/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/jpwvgr227/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/qmsvrr394/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/qmsvrr394/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/qmsvrr394/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/qmsvrr394/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/qmsvrr394/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/qmsvrr394/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/qmsvrr394/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/qmsvrr394/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/qmsvrr394/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/qmsvrr394/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/qmsvrr394/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/qmsvrr394/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/qmsvrr394/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/qmsvrr394/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/qmsvrr394/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/qmsvrr394/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/qmsvrr394/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/qmsvrr394/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/qmsvrr394/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/qmsvrr394/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/qmsvrr394/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/qmsvrr394/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/qmsvrr394/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/qmsvrr394/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/qmsvrr394/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/qmsvrr394/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/qmsvrr394/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/qmsvrr394/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/qmsvrr394/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/qmsvrr394/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/qmsvrr394/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/qmsvrr394/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/qmsvrr394/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/qmsvrr394/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/qmsvrr394/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/qmsvrr394/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/qmsvrr394/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/qmsvrr394/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/qmsvrr394/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/qmsvrr394/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/qmsvrr394/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/qmsvrr394/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/qmsvrr394/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/qmsvrr394/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/qmsvrr394/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/qmsvrr394/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/qmsvrr394/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center>周晓辉：北京拿学术期刊背书 俄国打脸没商量</h2>
 <img width="600" src="https://i.epochtimes.com/assets/uploads/2020/02/GettyImages-1199141990-600x400-2.jpg" />
-<h6>武汉肺炎疫情引发恐慌，俄罗斯也对中国人下了旅行禁令。(Dimitar DILKOFF / AFP)
+<h6>中共肺炎疫情引发恐慌，俄罗斯也对中国人下了旅行禁令。(Dimitar DILKOFF / AFP)
 </h6>
 <hr>
-<p>【大纪元2020年02月21日讯】2月18日，发生了两件表面上似乎并无关联的事情。一件是<a href="https://github.com/jpwvgr227/djy/blob/master/gb/tag/%E4%BF%84%E7%BD%97%E6%96%AF.md">俄罗斯</a>负责防治新冠肺炎疫情的部门表示，从2月20日起，俄罗斯将暂时禁止持工作、私人房屋、学习和旅游签证的中国公民入境。而且自2月19日起，暂停受理、审批和颁发中国公民的工作邀请函和境外中国公民的工作许可，暂停受理、审批和颁发中国公民的私人访问和学习邀请函，暂停向中国公民颁发学习、私人访问和旅游签证。</p>
-<p>在中共官方公布的<a href="https://github.com/jpwvgr227/djy/blob/master/gb/tag/%E6%AD%A6%E6%B1%89%E8%82%BA%E7%82%8E.md">武汉肺炎</a>确诊人数和死亡人数不断下降、世卫高赞北京防疫工作之际，<a href="https://github.com/jpwvgr227/djy/blob/master/gb/tag/%E4%BF%84%E7%BD%97%E6%96%AF.md">俄罗斯</a>反其道而行，禁止中国公民入境，难道是发现了什么？</p>
+	<p>【大纪元2020年02月21日讯】2月18日，发生了两件表面上似乎并无关联的事情。一件是<ahref="https://github.com/qmsvrr394/djy/blob/master/gb/tag/%E4%BF%84%E7%BD%97%E6%96%AF.md#1">俄罗斯</a>负责防治<ahref="https://github.com/qmsvrr394/djy/blob/master/gb/tag/%E4%B8%AD%E5%85%B1%E8%82%BA%E7%82%8E.md#1">中共肺炎</a>（俗称新冠肺炎）疫情的部门表示，从2月20日起，俄罗斯将暂时禁止持工作、私人房屋、学习和旅游签证的中国公民入境。而且自2月19日起，暂停受理、审批和颁发中国公民的工作邀请函和境外中国公民的工作许可，暂停受理、审批和颁发中国公民的私人访问和学习邀请函，暂停向中国公民颁发学习、私人访问和旅游签证。</p>
+<p>在中共官方公布的<ahref="https://github.com/qmsvrr394/djy/blob/master/gb/tag/%E4%B8%AD%E5%85%B1%E8%82%BA%E7%82%8E.md#1">中共肺炎</a>确诊人数和死亡人数不断下降、世卫高赞北京防疫工作之际，<ahref="https://github.com/qmsvrr394/djy/blob/master/gb/tag/%E4%BF%84%E7%BD%97%E6%96%AF.md#1">俄罗斯</a>反其道而行，禁止中国公民入境，难道是发现了什么？</p>
 <p>另一件是大陆多家媒体同时刊登国际顶级医学期刊《柳叶刀》（The Lancet）线上发表的一篇通讯声明，该声明是由来自8个国家的27名知名公共卫生科学家共同签署的。声明称“反对一切关于新型冠状病毒疾病(COVID-19)是人造武器的所有阴谋理论”，“支援中国抗击2019新型冠状病毒疾病疫情中的科研、公共卫生、医务工作者，谴责疾病起源谣言和错误资讯的所有传播者和帮助传播的媒体”，他们认为“除了制造恐慌、谣言、偏见、损害全球共同抗击该疾病的工作外，别无它用”。声明还表达了对世卫总干事“促进科学的论证和团结，而非误传和猜想”呼吁的支持。</p>
 <p>毋庸置疑，中共官方刻意在大陆媒体广泛刊登这篇声明，明显针对的是海外媒体、自媒体以及美国参议院军事委员会参议员汤姆·科顿的质疑，即新冠病毒是人工合成的。科顿曾在参议院听证会上表示，肆虐中国的新型冠状病毒，很可能来自位于武汉的中共的生物安全等级4级（或P4）的实验室（即武汉病毒研究所），而非中共当局所声称的武汉一个海鲜市场，因此中共误导了大众。</p>
 <p>这也意味着，这份声明的幕后推手极有可能是中共，因为只有中共才需要这样的声明来“辟谣”，也只有中共可以动用各种各样的手段和海外力量召集多国27名或者更多的科学家。然而，查阅英文，首先让人不解的是声明的标题居然是《支援中国的科研和医务人员抗击新型冠状病毒疾病疫情的声明》，而陆媒都篡改了标题，如澎湃新闻的题目是《27名科学家柳叶刀发声明：强烈谴责新冠非自然起源的阴谋论》。</p>
@@ -17,43 +17,49 @@
 <p>而凸显中共此地无银三百两的是，习近平2月14日在中央会议上特别提到要加速推动生物安全立法，并将生物安全纳入国安体系。15日，中共科技部就出台了《关于加强新冠病毒高等级病毒微生物实验室生物安全管理的指导意见》 ，强调要加强对实验室，特别是对病毒的管理，确保生物安全。这似乎表明中共当局并未排除武汉疫情爆发是因为武汉病毒实验室的管控不当的可能性。</p>
 <p>不过，18日俄罗斯禁止中国公民入境的措施着实打了中共的脸，让其利用国际知名期刊为自己背书的效果大打折扣，而俄罗斯举措背后正是其对新冠状病毒性质的判断。据大纪元报导，俄罗斯政府在官方网站上公布了一份有俄罗斯卫生部部长和俄罗斯联邦消费者保护局的局长共同签署的档：《预防 诊断 治疗新型冠状病毒（2019-NCOV）》，文件多达51页，第一版发表于1月29日，2月3日则发表了第二版。</p>
 <p>档最为关键的一点是，认为新型冠状病毒是一种由蝙蝠的冠状病毒和未知来源的冠状病毒，重新综合组成的病毒，并且它的基因排列顺序，有70%跟SARS是相吻合的。也就是说其明确阐述，新病毒不是天然来源，不是人类至今所知道的天然来源的这种产物，它是一个综合体。</p>
-<p>不妨直白点说，俄罗斯科学家得出的结论与早前美国伊利诺大学教授和匹兹堡大学教授以及印度科学家们得出的结论是一样的，即武汉病毒是人为制造的，可以视为<a href="https://github.com/jpwvgr227/djy/blob/master/gb/tag/%E7%94%9F%E5%8C%96%E6%AD%A6%E5%99%A8.md">生化武器</a>。正是基于这样的判断，意识到病毒潜在的危险，俄罗斯才最终宣布禁止中国人入境。被中共视为战略合作伙伴的俄罗斯，在危急自己国民人身安全的情况下，打脸中共没商量。而对俄罗斯的这份档，中共媒体中根本无一提及，因为中共是绝不允许这样的消息让中国人知晓的。</p>
+<p>不妨直白点说，俄罗斯科学家得出的结论与早前美国伊利诺大学教授和匹兹堡大学教授以及印度科学家们得出的结论是一样的，即武汉病毒是人为制造的，可以视为<ahref="https://github.com/qmsvrr394/djy/blob/master/gb/tag/%E7%94%9F%E5%8C%96%E6%AD%A6%E5%99%A8.md#1">生化武器</a>。正是基于这样的判断，意识到病毒潜在的危险，俄罗斯才最终宣布禁止中国人入境。被中共视为战略合作伙伴的俄罗斯，在危急自己国民人身安全的情况下，打脸中共没商量。而对俄罗斯的这份档，中共媒体中根本无一提及，因为中共是绝不允许这样的消息让中国人知晓的。</p>
 <p>在笔者看来，《柳叶刀》上的声明非但没有洗脱中共合成病毒的嫌疑，反而反证了中共的心虚，而俄罗斯的打脸与美国白宫贸易与制造业政策办公室主任纳瓦罗代表白宫向北京传递的资讯，即“对于病毒来源，中共必须被追究责任”，其实已经在暗示病毒是人工合成的概率非常大，中共迟早要为自己的狂妄和残酷付出代价。</p>
 <p>责任编辑：莆山</p>
-
+	
 <hr>
 
-#### 本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://git.io/JesJV">翻墙软件</a>才能访问）
-> 原文：<a href="https://www.epochtimes.com/gb/20/2/20/n11884183.htm">周晓辉：北京拿学术期刊背书 俄国打脸没商量</a>
 
-
-#### 下载<a href="https://git.io/JesJV">翻墙软件</a>浏览<a href="https://www.epochtimes.com">大纪元</a>相关新闻：
-> <li><a href="https://www.epochtimes.com/gb/20/2/18/n11877179.htm">王友群：关于武汉新冠病毒来源的十个疑问</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/2/12/n11862499.htm">复旦生物系校友呼吁彻查新冠病毒来源</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/2/8/n11853087.htm">【疫情最前线】证据指中共研发致命生化武器</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/2/3/n11842412.htm">首席生化武器专家坐镇武汉 P4研究引关注</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/1/31/n11835889.htm">【世事关心】中共会开发生化武器？专家分析</a></li>
-> <li><a href="https://github.com/jpwvgr227/djy/blob/master/gb/20/2/18/n11878481.md">武汉肺炎恐慌 俄罗斯禁中国公民入境</a></li>
-
-#### 下载<a href="https://git.io/JesJV">翻墙软件</a>浏览<a href="https://www.epochtimes.com">大纪元</a>热门新闻：
-> <li><a href="https://www.epochtimes.com/gb/20/1/17/n11801312.htm">【更新】肺炎扩散30国和地区 武汉死亡率高</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/2/19/n11879658.htm">【独家】外逃求生？武汉一天出走2.8万人</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/2/19/n11881404.htm">北京西城成疫情重灾区 财政部员工住宅楼染疫</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/2/20/n11882278.htm">孙小果被执行死刑 成微博热门话题</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/2/14/n11869946.htm">大疫下解救有道 历史启示带您闯过武汉肺炎</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/2/14/n11869721.htm">【历史上的瘟疫】瘟疫中走向衰亡的古罗马帝国</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/2/12/n11864598.htm">胎记是契约？再续前世缘</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/2/7/n11851418.htm">【命理】为什么会身弱多病？</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/2/17/n11875760.htm">【四维健康】武汉肺炎病人突然倒地死亡 原因为何？</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/2/18/n11876712.htm">【翻墙必看】分析：中南海内斗正全面失控</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/2/18/n11878288.htm">【新闻看点】封城封区封声 习掀“人民战争”？</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/2/20/n11881829.htm">【拍案惊奇】新病毒无特效药 病患求生要闯2关</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/2/19/n11878995.htm">【拍案惊奇】红会囤口罩 疫区粮食供应亮黄灯</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/2/20/n11882631.htm">传刘真装叶克膜抢救？ 经纪人：一起帮她集气</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/2/19/n11879753.htm">日本动画预言香港反送中与武汉肺炎爆发？</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/2/16/n11873581.htm">疫情下横店片场复工 赵丽颖杨幂的粉丝齐抗议</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/2/18/n11878461.htm">台歌手大支写歌呛WHO 嘲讽中共数据造假</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/2/18/n11878722.htm">钟楚红庆六十岁生日 无惧疫情照常聚餐</a></li>
+<strong>相关新闻：</strong>
+<li><a href="https://github.com/qmsvrr394/djy/blob/master/gb/20/1/31/n11835889.md#1">【世事关心】中共会开发生化武器？专家分析</a></li>
+<li><a href="https://github.com/qmsvrr394/djy/blob/master/gb/20/2/3/n11842412.md#1">首席生化武器专家坐镇武汉 P4研究引关注</a></li>
+<li><a href="https://github.com/qmsvrr394/djy/blob/master/gb/20/2/12/n11862499.md#1">复旦生物系校友呼吁彻查中共病毒来源</a></li>
+<li><a href="https://github.com/qmsvrr394/djy/blob/master/gb/20/2/18/n11877179.md#1">王友群：关于武汉新冠病毒来源的十个疑问</a></li>
 <hr>
 
-#### 手机上长按并复制下面二维码分享本文章：<br><br><img src="http://d1p1.ip.zn2.us/v.php?action=qrcode&url=https://github.com/jpwvgr227/djy/blob/master/gb/20/2/20/n11884183.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/jpwvgr227/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/jpwvgr227/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/jpwvgr227/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/jpwvgr227/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/jpwvgr227/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/jpwvgr227/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/jpwvgr227/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/jpwvgr227/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/jpwvgr227/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/jpwvgr227/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/jpwvgr227/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/jpwvgr227/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/jpwvgr227/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/jpwvgr227/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/jpwvgr227/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/jpwvgr227/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/jpwvgr227/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/jpwvgr227/djy/master/gb/300/st1.jpg" title="关注3亿人三退"  alt="关注3亿人三退"></a><br><a href="https://github.com/jpwvgr227/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/jpwvgr227/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/jpwvgr227/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/jpwvgr227/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/jpwvgr227/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/jpwvgr227/djy/master/gb/300/sj1.jpg" title="303万人举报江泽民"  alt="303万人举报江泽民"></a><br><a href="https://github.com/jpwvgr227/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/jpwvgr227/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/jpwvgr227/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/jpwvgr227/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/jpwvgr227/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/jpwvgr227/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/jpwvgr227/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/jpwvgr227/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/jpwvgr227/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/jpwvgr227/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/jpwvgr227/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/jpwvgr227/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/jpwvgr227/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/jpwvgr227/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/jpwvgr227/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/jpwvgr227/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/jpwvgr227/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/jpwvgr227/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/jpwvgr227/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/jpwvgr227/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/jpwvgr227/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/jpwvgr227/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/jpwvgr227/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/jpwvgr227/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
+
+<strong>编辑推荐：</strong>
+<li><a href="https://github.com/qmsvrr394/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank">人心向善 大陆当初盛况</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/3/26/n10248973.md#1" target="_blank">还原真实的中共：年轻人乌托邦梦碎</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/16/11/20/n8510885.md#1" target="_blank">哈尔滨一位大学教师17年的坚持</a></li>
+<hr>
+
+<strong>热门新闻：</strong>
+<li><a href="https://github.com/qmsvrr394/djy/blob/master/gb/21/4/15/n12880731.md#1">【馨香雅句】王羲之的书法老师竟是她</a></li>
+<li><a href="https://github.com/qmsvrr394/djy/blob/master/gb/21/4/18/n12887969.md#1">【小宇宙传说】宇宙中最大谜题：什么是时间？</a></li>
+<li><a href="https://github.com/qmsvrr394/djy/blob/master/gb/21/4/20/n12891592.md#1">【未解之谜】轰动世界的巴克斯特实验</a></li>
+<li><a href="https://github.com/qmsvrr394/djy/blob/master/gb/21/4/23/n12899457.md#1">【命理】混迹绿林怎能得福寿善报？</a></li>
+<li><a href="https://github.com/qmsvrr394/djy/blob/master/gb/21/4/24/n12903028.md#1">【小宇宙传说】死亡是生命结束？天上有摄像机</a></li>
+<li><a href="https://github.com/qmsvrr394/djy/blob/master/gb/21/4/24/n12903156.md#1">【横河观点】美国媒体人如何吃中共的嘴软</a></li>
+<li><a href="https://github.com/qmsvrr394/djy/blob/master/gb/21/4/24/n12902456.md#1">【拍案惊奇】日防长警告防台赤化 日媒：别再救中共</a></li>
+<li><a href="https://github.com/qmsvrr394/djy/blob/master/gb/21/4/24/n12901728.md#1">【时事军事】太空战争有多近 出乎你我预料</a></li>
+<li><a href="https://github.com/qmsvrr394/djy/blob/master/gb/21/4/24/n12902826.md#1">中共推“工龄归零” 重庆受害者叹活不下去</a></li>
+<li><a href="https://github.com/qmsvrr394/djy/blob/master/gb/21/4/24/n12902419.md#1">台湾中央气象局：台南高屏花莲4县市大雨特报</a></li>
+<li><a href="https://github.com/qmsvrr394/djy/blob/master/gb/21/4/24/n12903007.md#1">印度疫情如“海啸”首都每4分钟1人死亡</a></li>
+<li><a href="https://github.com/qmsvrr394/djy/blob/master/gb/21/4/23/n12901477.md#1">杜汶泽脸书宣布：旗下网台永久聘用蔡玉玲</a></li>
+<li><a href="https://github.com/qmsvrr394/djy/blob/master/gb/21/4/23/n12901216.md#1">赵丽颖冯绍峰离婚登热搜 21亿点阅量被消失</a></li>
+<li><a href="https://github.com/qmsvrr394/djy/blob/master/gb/21/4/25/n12904623.md#1">台上献唱撞脸刘德华 港星江华模样惊呆网友</a></li>
+<li><a href="https://github.com/qmsvrr394/djy/blob/master/gb/21/4/24/n12902527.md#1">《父亲》影评：出色的演员与剧本 成就优质电影</a></li>
+<li><a href="https://github.com/qmsvrr394/djy/blob/master/gb/21/4/25/n12903597.md#1">林逸欣情定7年男友 曝婚讯“一起慢慢变老”</a></li>
+<li><a href="https://github.com/qmsvrr394/djy/blob/master/gb/21/4/23/n12900193.md#1">微波炉最危险不是辐射 做错2件事当心受伤、吃进毒素</a></li>
+<li><a href="https://github.com/qmsvrr394/djy/blob/master/gb/21/4/25/n12903574.md#1">竹笋撑破湖南学校宿舍水泥地 快长到天花板</a></li>
+<li><a href="https://github.com/qmsvrr394/djy/blob/master/gb/21/4/21/n12894418.md#1">500度以下近视眼能痊愈？2招改善视力</a></li>
+<li><a href="https://github.com/qmsvrr394/djy/blob/master/gb/21/4/19/n12890228.md#1">出发啰！在美国骑自行车必知10项安全规则</a></li>
+<li><a href="https://github.com/qmsvrr394/djy/blob/master/gb/21/4/25/n12903393.md#1">美国田径赛杀出“程咬金” 小狗乱入冲第一</a></li>
+<hr>
+
+<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/qmsvrr394/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/qmsvrr394/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/20/2/20/n11884183.htm">周晓辉：北京拿学术期刊背书 俄国打脸没商量</a></p><hr>
+
+<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/qmsvrr394/djy/blob/master/gb/20/2/20/n11884183.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/qmsvrr394/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/qmsvrr394/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/qmsvrr394/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/qmsvrr394/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/qmsvrr394/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/qmsvrr394/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/qmsvrr394/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/qmsvrr394/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/qmsvrr394/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/qmsvrr394/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/qmsvrr394/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/qmsvrr394/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/qmsvrr394/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/qmsvrr394/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/qmsvrr394/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/qmsvrr394/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/qmsvrr394/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/qmsvrr394/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/qmsvrr394/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/qmsvrr394/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/qmsvrr394/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/qmsvrr394/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/qmsvrr394/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/qmsvrr394/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/qmsvrr394/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/qmsvrr394/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/qmsvrr394/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/qmsvrr394/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/qmsvrr394/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/qmsvrr394/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/qmsvrr394/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/qmsvrr394/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/qmsvrr394/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/qmsvrr394/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/qmsvrr394/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/qmsvrr394/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/qmsvrr394/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/qmsvrr394/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/qmsvrr394/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/qmsvrr394/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/qmsvrr394/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/qmsvrr394/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/qmsvrr394/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/qmsvrr394/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/qmsvrr394/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/qmsvrr394/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/qmsvrr394/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/qmsvrr394/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
